apps/zwave/zwave/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zwave-ingress
  labels:
    revision: "1"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zwave.samsonnguyen.ca`)
      kind: Rule
      services:
        - name: zwave
          port: 8091
          namespace: zwave
      middlewares:
        - name: traefik-sso@kubernetescrd
        - name: traefik-redirect-scheme@kubernetescrd
        - name: traefik-basic-auth@kubernetescrd
  tls:
    secretName: default-samsonnguyen-ca
    domains:
      - main: samsonnguyen.ca
